--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
     </div>
     <!-- main -->
     <main class="main">
+        <h1 class="main-title">صفحه اصلی</h1>
         
+        <div class="main-overlay flex flex-column">
+            <h1>این همه بسته بی سابقست!</h1>
+            <button>اینجا چه خبره!</button>
+        </div>
     </main>
     <!-- sidebar -->
     <div class="sidebar"></div>
