create a chart with chart js pkg

--- a/index.html
+++ b/index.html
@@ -68,8 +68,18 @@
             <h1>اینهمه بسته بی سابقست!</h1>
             <button>اینجا چه خبره!</button>
         </div>
+
+        <div class="chart">
+            <h1>نمودار میزان مصرف کل</h1>
+            <canvas id="myChart" height="100" aria-label="chart" role="img">
+                Your browser does not support the canvas element.
+            </canvas>
+        </div>
     </main>
     <!-- sidebar -->
     <div class="sidebar"></div>
+
+    <script src="node_modules/chart.js/dist/chart.min.js"></script>
+    <script src="content/js/index.js" type="module"></script>
 </body>
 </html>
