delete the chart js cdn

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
 
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"></script>
+    <script src="node_modules/chart.js/dist/chart.min.js"></script>
     <script src="content/js/index.js" type="module"></script>
 </body>
 </html>
