feat: Add href to sidebar list items

--- a/index.html
+++ b/index.html
@@ -140,25 +140,25 @@
         <ul class="sidebar-menu">
             <li class="sidebar-menu-item flex align-items-center active">
                 <span><i class="fa-solid fa-house"></i></span>
-                صفحه اصلی
+                <a href="">صفحه اصلی</a>
             </li>
             <li class="sidebar-menu-item-breaker">سرویس ها</li>
             <li class="sidebar-menu-item flex align-items-center">
                 <span><i class="fa-solid fa-chart-pie"></i></span>
-                اینترنت
+                <a href="">اینترنت</a>
             </li>
             <li class="sidebar-menu-item flex align-items-center">
                 <span><i class="fa-solid fa-chart-column"></i></span>
-                کارکرد و فروش
+                <a href="">کارکرد و فروش</a>
             </li>
             <li class="sidebar-menu-item flex align-items-center">
                 <span><i class="fa-solid fa-bell-concierge"></i></span>
-                خدمات
+                <a href="">خدمات</a>
             </li>
             <li class="sidebar-menu-item-breaker">مدیریت</li>
             <li class="sidebar-menu-item flex align-items-center">
                 <span><i class="fa-solid fa-list-check"></i></span>
-                مدیریت خدمات
+                <a href="">مدیریت خدمات</a>
             </li>
             <li class="sidebar-menu-item flex align-items-center">
                 <span><i class="fa-solid fa-sim-card"></i></span>
@@ -166,11 +166,11 @@
             </li>
             <li class="sidebar-menu-item flex align-items-center space-top">
                 <span><i class="fa-solid fa-circle-question"></i></span>
-                سوالات متداول
+                <a href="">سوالات متداول</a>
             </li>
             <li class="sidebar-menu-item flex align-items-center">
                 <span><i class="fa-solid fa-location-dot"></i></span>
-                ارتباط با ما
+                <a href="">ارتباط با ما</a>
             </li>
         </ul>
     </div>
